fix: property gap

--- a/app/assets/sass/_blocks/_category.sass
+++ b/app/assets/sass/_blocks/_category.sass
@@ -3,7 +3,6 @@
 	
 	&-container
 		@include flexbox(flex, space-between, stretch, wrap)
-		gap: 30px
 		
 	&-item
 		background: 
@@ -34,6 +33,7 @@
 			background-image: linear-gradient(rgba(33, 22, 22, 0.7), rgba(33, 22, 22, 0.7)), url(../img/accesories.jpg)
 			width: 100%
 			min-height: 180px
+			margin-top: 30px
 
 	&-subtitle
 		display: block
