--- a/app/assets/sass/_blocks/_fetured-items.sass
+++ b/app/assets/sass/_blocks/_fetured-items.sass
@@ -219,7 +219,6 @@
 		margin-bottom: 45px
 	
 	&-cards
-		gap: 30px
 		@include flexbox(flex, space-between, stretch, wrap)
 	
 	&-card
@@ -227,6 +226,7 @@
 		width: 31.4%
 		position: relative
 		background-color: #f8f8f8
+		margin-bottom: 30px
 
 		&:hover 
 			.fetured-items-card-wrap:after
@@ -318,7 +318,7 @@
 			font-size: 16px
 
 	&-button
-		margin-top: 48.5px
+		margin-top: 18.5px
 		border: 1px solid $color_bittersweet_approx
 		color: $color_brink_pink_approx
 		font-size: 16px
